<resources>
    <string name="app_name">MyLib</string>
    <string name="users">Users</string>
    <string name="my_lib">My Library</string>
    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="restore_pass">Restore password</string>
    <string name="registration">Registration</string>
    <string name="login">Login</string>
    <string name="synchronize">Synchronize\n data</string>
    <string name="add_data">Add\n%s</string>
    <string name="books_count">Books: %d</string>
    <string name="authors_count">Author: %d</string>
    <string name="books">Books</string>
    <string name="authors">Authors</string>
    <string name="my_list">My list</string>
    <string name="author">Author</string>
    <string name="hint_first_name">First Name</string>
    <string name="hint_last_name">Last Name</string>
    <string name="description">Description</string>
    <string name="hint_author_date">Date</string>
    <string name="add">Add</string>
    <string name="book">book</string>
    <string name="hint_book_title">Book title</string>
    <string name="hint_book_published">Published</string>
    <string name="hint_book_genre">Genre</string>
    <string name="choose_author">Choose author</string>
    <string name="select_from_sd">Select from sd</string>
    <string name="biography">Biography</string>
    <string name="zero">0</string>
    <string name="hint_author_name">Author name</string>
    <string name="hint_book_series">Series</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="menu">Menu</string>
    <string name="add_citation">Add citation</string>
    <string name="empty_value">Empty value</string>
    <string name="add_book">Add book</string>
    <string name="logout">Logout</string>
    <string name="incorrect_value">Incorrect value</string>
    <string name="hint_confirm_password">Confirm password</string>
    <string name="incorrect_password">Incorrect password</string>
    <string name="search">Search</string>
    <string name="sort">Sorting</string>
    <string name="cancel">Cancel</string>
    <string name="settings">Settings</string>
    <string name="language">Language</string>
    <string name="english">English</string>
    <string name="bel">Беларуская</string>
    <string name="rus">Российская</string>
    <string name="make_photo">Make photo</string>
    <string name="choose_photo">Choose image</string>
    <string name="map">Map</string>
    <string name="library">Libraries</string>
    <string name="current_pos">You are here</string>
    <string name="author_not_selected">Author is not selected</string>
    <string name="image_not_support">Sorry, but this format of image is not supporting</string>
    <string name="book_not_support">Sorry, but this book format is not supporting</string>
    <string name="connection_failed">Connection failed</string>
    <string name="check_connection">Check your connection</string>
    <string name="reading_list">Reading list</string>
    <string name="save">Save</string>
    <string name="no_data">The new data was not detected</string>
    <string name="congrad">Поздравляю!</string>
    <string name="file_not_found">File not found</string>
    <string-array name="genre_list">
        <item>Fantasy</item>
        <item>Science fiction</item>
        <item>Detective</item>
        <item>History</item>
        <item>Novel</item>
        <item>Other</item>
    </string-array>
    <string-array name="author_sort_types">
        <item>Alphabetical</item>
        <item>Last added</item>
        <item>Book counts</item>
    </string-array>
    <string-array name="book_sort_types">
        <item>Alphabetical</item>
        <item>Last added</item>
        <item>Rating</item>
        <item>Genre</item>
        <item>Date</item>
    </string-array>
</resources>
