<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context=".MainActivity">

    <item
        android:id="@+id/action_more"
        android:icon="@drawable/ic_menu"
        app:showAsAction="always"
        android:title="@string/menu">
        <menu>
            <item
                android:id="@+id/synchronize"
                android:icon="@drawable/ic_synchronize"
                android:title="@string/synchronize"/>

            <item
                android:id="@+id/save"
                android:icon="@drawable/ic_default_avatar"
                android:title="@string/save"/>
        </menu>
    </item>

</menu>